--- a/projectX/Views/Reviews/Index.cshtml
+++ b/projectX/Views/Reviews/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<projectX.Models.Review>
 
+@{
+    ViewData["Title"] = "Reviews";
+}
+
 <h1>Reviews</h1>
 
 <a asp-action="Create" class="btn btn-primary">Add New Review</a>
