--- a/projectX/Views/Ticket/Index.cshtml
+++ b/projectX/Views/Ticket/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<projectX.Models.Ticket>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tickets";
 }
 
 <h1>Tickets</h1>
