--- a/projectX/wwwroot/css/site.css
+++ b/projectX/wwwroot/css/site.css
@@ -18,5 +18,11 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 80px;
+}
+
+@media (max-width: 768px) {
+    body {
+        padding-top: 70px;
+    }
 }
